Set Up DV for classes
Interface method tables are not currently set up